2012-08-08 Molnár Károly <proton7@freemail.hu>
	* tools/config-help.pl: New tab in MCU info pages.

2012-08-08 Molnár Károly <proton7@freemail.hu>
	* tools/config-help.pl: Create some html files from mplab-x
	  8bit_device.info file. All MCU to belongs an html file,
          in which are listed in the Config bits.

2012-08-08 Molnár Károly <proton7@freemail.hu>
	* tools/device-manager.pl: Minor change in the license.

2012-07-29 Molnár Károly <proton7@freemail.hu>
	* tools/device-manager.pl: Added further new command line option.

2012-07-28 Molnár Károly <proton7@freemail.hu>
	* tools/device-manager.pl: Added new command line option.

2012-07-24 Molnár Károly <proton7@freemail.hu>
	* tools/device-manager.pl:
	  Added script to adding and deleting of the processors and
	  variety investigations.

2012-07-14 Borut Razem <borut.razem AT siol.net>
	* tools/cmp_gp_mp.sh: detect gputils specifics in lkr files

2012-07-12 Borut Razem <borut.razem AT siol.net>
	* tools/cmp_gp_mp.sh:
	  corrected (reverted) the logic of the command line options --strict,
	  $BLANK_OPTS added when diffing .inc files

2012-07-08 Borut Razem <borut.razem AT siol.net>
	* tools/cmp_gp_mp.sh:
	  added command line options --strict, --help and -h

2012-07-07 Borut Razem <borut.razem AT siol.net>
	* tools/cmp_gp_mp.sh:
	  detection of changed .inc files with gputils specific
	  modifications (lines starting with '@@@'),
	  detection of devices from gpprocessor.c in lkr folder,
	  detection of .lkr from lkr folder in gpprocessor.c,
	  detection of devices from gpprocessor.c in header folder,
	  added command line options

2012-07-01 Borut Razem <borut.razem AT siol.net>
	* tools/cmp_gp_mp.sh: added script to compare gputils and
	  mplabx .inc and .lkr files

2009-03-13 Borut Razem <borut.razem AT siol.net>
	* scripts/build/mingw/gputils.nsi:
	  remove DISTRIBUTION.txt and NEWS.txt when uninstalling
	* scripts/build/mingw/do_setup.sh: added

2008-05-19 Borut Razem <borut.razem AT siol.net>