@@ -1,3 +1,7 @@
+2012-08-09 Molnár Károly <proton7@freemail.hu>
+	* tools/config-help.pl: Compute the size of SFRs and GPRs
+          from gputils inc files.
+
 2012-08-08 Molnár Károly <proton7@freemail.hu>
 	* tools/config-help.pl: New tab in MCU info pages.
 
